--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -51,3 +51,63 @@ section.new-tweet textarea {
   border-radius: 10px;
   resize: none;
 }
+
+.tweet {
+  width: 100%;
+  background: white;
+  margin: 0 auto;
+  padding: 1em;
+  border-radius: 10px;
+  box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.1);
+  float: right;
+}
+
+.tweet header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1em;
+}
+
+
+
+.tweet header h3 {
+  margin: 0;
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+.tweet footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1em;
+}
+
+.tweet footer div {
+  display: flex;
+  align-items: center;
+}
+
+.tweet footer div span {
+  font-size: 0.8em;
+  color: #999;
+  margin-right: 1em;
+}
+
+.tweet footer div i {
+  color: #999;
+  cursor: pointer;
+}
+
+.tweet p {
+  font-size: 1.2em;
+  margin-top: 1em;
+}
+
+
+.fa-solid.fa-heart {
+  color: #7f7f7f;
+}
+
+.fa-solid.fa-heart:hover {
+  color: red;
+}
