--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -25,16 +25,16 @@ section.new-tweet h2 {
   font-size: 1.5em;
   margin-bottom: 1em;
   text-align: left;
-  color: #4056A1;
+  color: #6474ab;
 
 }
 
 section.new-tweet label {
-  color: #4056A1;
+  color: #8694ce;
 }
 
 section.new-tweet output {
-  color: #4056A1;
+  color: #919ec2;
   float: right;
   padding: -1em -1em;
 }
@@ -66,6 +66,8 @@ section.new-tweet textarea {
   display: flex;
   align-items: center;
   margin-bottom: 1em;
+  color: #FFFFFF
+
 }
 
 
